tests/test_files/neg/bad_encoding2.s
	restrict r0 Int				; FAIL: attempt to restrict SCap with a WType
	halt
